--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,22 @@
-# For projects using nanoc (http://nanoc.ws/)
-
-# Default location for output, needs to match output_dir's value found in config.yaml
-output/
-
-# Temporary file directory
-tmp/
-
-# Crash Log
-crash.log
+node_modules
+build
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+pids
+logs
+results
+npm-debug.log
+.idea
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
