--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   ],
   "dependencies": {
-    "socket.io": "^1.2.0",
+    "socket.io": "*",
     "tgi-core": "*",
     "tgi-spec": "*",
     "tgi-utility": "*"
@@ -31,6 +31,8 @@
   "author": "Sean Smith <sean@tgicloud.com>",
   "license": "MIT",
   "devDependencies": {
+    "connect": "^2.8.8",
+    "mongodb": "^1.3.19",
     "gulp": "^3.8.7",
     "gulp-concat": "^2.4.0",
     "gulp-jshint": "^1.8.4",
