--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "Sean Smith <sean@tgicloud.com>",
   "license": "MIT",
   "devDependencies": {
+    "express": "*",
     "connect": "^2.8.8",
     "mongodb": "^1.3.19",
     "gulp": "^3.8.7",
