--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tgi-store-remote",
-  "version": "0.0.6",
+  "version": "0.0.9",
   "description": "RemoteStore",
   "contributors": [
     {
@@ -31,6 +31,7 @@
   "author": "Sean Smith <sean@tgicloud.com>",
   "license": "MIT",
   "devDependencies": {
+    "tgi-store-mongodb": "*",
     "express": "*",
     "connect": "^2.8.8",
     "mongodb": "^1.3.19",
