--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tgi-store-remote",
-  "version": "0.0.31",
+  "version": "0.0.32",
   "description": "RemoteStore",
   "contributors": [
     {
@@ -33,13 +33,15 @@
   "devDependencies": {
     "tgi-store-mongodb": "*",
     "express": "*",
-    "connect": "^2.8.8",
-    "mongodb": "^1.3.19",
-    "gulp": "^3.8.7",
-    "gulp-concat": "^2.4.0",
-    "gulp-jshint": "^1.8.4",
-    "gulp-rename": "^1.2.0",
-    "gulp-uglify": "^1.0.1",
-    "jshint-stylish": "^1.0.0"
+    "connect": "*",
+    "mongodb": "*",
+    "gulp": "*",
+    "gulp-concat": "*",
+    "gulp-jshint": "*",
+    "gulp-rename": "*",
+    "gulp-uglify": "*",
+    "jshint": "*",
+    "jshint-stylish": "*",
+    "minimatch": "*"
   }
 }
