--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tgi-store-remote",
-  "version": "0.0.32",
+  "version": "0.0.33",
   "description": "RemoteStore",
   "contributors": [
     {
@@ -9,7 +9,7 @@
     }
   ],
   "dependencies": {
-    "socket.io": "*",
+    "socket.io": "1.3.7",
     "tgi-core": "*",
     "tgi-spec": "*",
     "tgi-utility": "*"
@@ -31,17 +31,14 @@
   "author": "Sean Smith <sean@tgicloud.com>",
   "license": "MIT",
   "devDependencies": {
-    "tgi-store-mongodb": "*",
-    "express": "*",
-    "connect": "*",
-    "mongodb": "*",
-    "gulp": "*",
-    "gulp-concat": "*",
-    "gulp-jshint": "*",
-    "gulp-rename": "*",
-    "gulp-uglify": "*",
+    "express": "4.13.3",
+    "connect": "2.30.2",
+    "gulp": "^3.8.7",
+    "gulp-concat": "^2.4.0",
+    "gulp-jshint": "^1.8.4",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^1.0.1",
     "jshint": "*",
-    "jshint-stylish": "*",
-    "minimatch": "*"
+    "jshint-stylish": "*"
   }
 }
